fix page design
Cropped image, also fixed white bottom of page when fullscreening.

--- a/src/preferences-welcome/preferences-welcome.component.css
+++ b/src/preferences-welcome/preferences-welcome.component.css
@@ -4,22 +4,30 @@ div {
     background-color: #ACDED5;
 }
 
-html {font-size: 18px;}
-
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     font-weight: 400;
     line-height: 1.45;
     color: #333;
+    padding-bottom: 20px;
+
+}
+
+#wrapper {
+    min-height: 840px;
 }
 
 p {margin-bottom: 1.25em;}
 
 h1, h2, h3, h4, h5 {
-    margin: 2rem 0 0.25rem;
-    font-family: 'Montserrat', sans-serif;
+    margin: 0.5rem 0 0.25rem;
     font-weight: 400;
     line-height: 1.15;
+}
+
+#dearHeader {
+    margin-top: 50px;
+    font-weight: 450;
 }
 
 .white-color {
@@ -42,12 +50,12 @@ h5 {font-size: 1.2em; text-align: center;}
 small, .text_small {font-size: 0.833em;} 
 
 
-.white-color {
-    color: white;
+.grey-color {
+    color: #47525E;
 }
 
 .mat-slide-toggle {
-    margin-left: 5px;
+    margin-right: 5px;
 }
 
 /deep/ .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
@@ -59,7 +67,8 @@ small, .text_small {font-size: 0.833em;}
 }
 
 button {
-    width: 100px;
+    width: 184px;
+    height: 50px;
     min-width: 24px;
 }
 
@@ -75,16 +84,18 @@ button:nth-of-type(2) {
 
 ul {
     list-style: none;
-    padding-left: 5px;
+    padding-left: 0;
+    margin-top: 30px;
 }
 
-li {
-    
+#itemPreference {
+    margin-top: 15px;
 }
 
 #preferences {
     /* float: left; */
-    max-width: 45%;
+    min-width: 500px;
+    margin-top: 30px;
 }
 
 #main {
@@ -101,7 +112,7 @@ li {
 }*/
 
 #imageDiv {
-    margin-top: -5%;
+    margin-top: -100px;
     text-align: right;
 }
 
@@ -110,9 +121,13 @@ li {
 }
 
 #btnDiv {
-    margin-top: 1%;
+    margin-top: 30px;
 }
 
 .flexer {
     display: flex;
+}
+
+.padded {
+    margin-top: 50px;
 }
